--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,8 @@
         "symfony/dotenv": "5.0.*",
         "symfony/flex": "^1.3.1",
         "symfony/framework-bundle": "5.0.*",
-        "symfony/yaml": "5.0.*"
+        "symfony/yaml": "5.0.*",
+        "ext-json": "*"
     },
     "require-dev": {
     },
