--- a/composer.json
+++ b/composer.json
@@ -18,6 +18,7 @@
         "symfony/yaml": "5.0.*"
     },
     "require-dev": {
+        "symfony/var-dumper": "5.0.*"
     },
     "config": {
         "preferred-install": {
